--- a/analysis/genomic_context_analysis.qmd
+++ b/analysis/genomic_context_analysis.qmd
@@ -116,15 +116,16 @@ Higher values indicate more comprehensive benchmarking of that region type.
   mutate(
     ref = std_references(ref),
     bench_type_label = get_bench_type_labels()[as.character(bench_type)]
-  ) %>% 
-   # filter(context_name != "TR10kb") %>%
+  ) %>%
+  # filter(context_name != "TR10kb") %>%
   ggplot(aes(
     x = context_name,
     y = pct_of_context,
     fill = bench_version
   )) +
-  geom_col(aes(alpha = bench_type), 
-           position = "dodge", color = "grey30", linewidth = 0.2) +
+  geom_col(aes(alpha = bench_type),
+    position = "dodge", color = "grey30", linewidth = 0.2
+  ) +
   scale_y_continuous(
     labels = scales::percent_format(scale = 1),
     # limits = c(0, 1),
@@ -365,7 +366,7 @@ fold_change_df <- var_counts_by_context_df %>%
     ref = std_references(ref),
     bench_type_label = get_bench_type_labels()[as.character(bench_type)]
   ) %>%
-    filter(context_name %in% c("Homopolymer", "TR100bp", "SegDup", "LowMappability")) %>%
+  filter(context_name %in% c("Homopolymer", "TR100bp", "SegDup", "LowMappability")) %>%
   ggplot(aes(
     x = context_name,
     y = fold_change,
